atlas/main/default/objects/Load_Carrier_Interest__c/Load_Carrier_Interest__c.object-meta.xml
<CustomObject>
    <label>Load Carrier Interest</label>
    <nameField>
        <displayFormat>LCI-{000000}</displayFormat>
        <label>Interest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Load Carrier Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>