atlas/main/default/objects/Load_Carrier_Interest__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Interest Queue</relationshipLabel>
    <relationshipName>Interest_Queue</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>