atlas/main/default/objects/Load_Carrier_Interest__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Carrier Interest Queue</relationshipLabel>
    <relationshipName>Carrier_Interest_Queue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>