atlas/main/default/objects/Load_Carrier_Interest__c/fields/Skip_Reason__c.field-meta.xml
<CustomField>
    <fullName>Skip_Reason__c</fullName>
    <label>Skip Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>