atlas/main/default/objects/Load_Carrier_Interest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Skipped</fullName>
                <label>Skipped (Compliance)</label>
            </value>
            <value>
                <fullName>Called</fullName>
            </value>
            <value>
                <fullName>Retry Pending</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Exhausted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>